Kubernetes/API/Api.Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contributor-app-deployment
  namespace: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: contributor-app
  template:
    metadata:
      labels:
        app: contributor-app
    spec:
      containers:
      - name: myapp
        image: pradumnasaraf/contributors:latest
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
          requests:
            memory: "500Mi"
            cpu: "500m"
        startupProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 5      
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 5
        ports:
        - containerPort: 8080
