Kubernetes/API/Api.Service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: contributor-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
